Fix max width on mobile

--- a/sass/partials/_mixins.scss
+++ b/sass/partials/_mixins.scss
@@ -26,7 +26,6 @@
 @mixin artist-album-card() {
   .item {
     position: relative;
-    max-width: 256px;
 
     .as-list & {
       grid-column: 1;
